INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR}
                           "${CMAKE_CURRENT_BINARY_DIR}/../stable"
                           "${CMAKE_CURRENT_BINARY_DIR}/../sandbox")

IF(WIN32)
    ADD_DEFINITIONS("/D${CMAKE_PROJECT_NAME}_EXPORT=__declspec(dllimport)"
                    "/D${CMAKE_PROJECT_NAME}SANDBOX__EXPORT=__declspec(dllimport)"
                    "/D${CMAKE_PROJECT_NAME}DEPRECATED_EXPORT=__declspec(dllexport)")
ELSE()
    ADD_DEFINITIONS("-D${CMAKE_PROJECT_NAME}_EXPORT="
                    "-D${CMAKE_PROJECT_NAME}SANDBOX_EXPORT="
                    "-D${CMAKE_PROJECT_NAME}DEPRECATED_EXPORT=")
ENDIF()

PROTOBUF_GENERATE(CPP CPP_DEPRECATED_SOURCES CPP_DEPRECATED_HEADERS
                  EXPORT_MACRO "${CMAKE_PROJECT_NAME}DEPRECATED_EXPORT"
                  PROTOFILES ${DEPRECATED_PROTOS}
                  PROTOROOT ${DEPRECATED_ROOT}
                  INCLUDES ${STABLE_ROOT} ${SANDBOX_ROOT}
                  OUTPATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(${DEPRECATED_LIBRARY_NAME} SHARED
            ${CPP_DEPRECATED_SOURCES} ${CPP_DEPRECATED_HEADERS})
TARGET_LINK_LIBRARIES(${DEPRECATED_LIBRARY_NAME}
                      ${STABLE_LIBRARY_NAME}
                      ${SANDBOX_LIBRARY_NAME})
SET_TARGET_PROPERTIES(${DEPRECATED_LIBRARY_NAME}
                      PROPERTIES
                      VERSION ${SO_VERSION})
INSTALL(TARGETS ${DEPRECATED_LIBRARY_NAME}
        EXPORT "${CMAKE_PROJECT_NAME}Depends"
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION bin)

INSTALL_FILES_RECURSIVE("include/${INSTALL_PREFIX}/deprecated/"
                        CPP_DEPRECATED_HEADERS)
