
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR} "${CMAKE_CURRENT_BINARY_DIR}/../stable")

IF(WIN32)
    ADD_DEFINITIONS("/DRST_EXPORT=__declspec(dllimport)" "/DRSTSANDBOX_EXPORT=__declspec(dllexport)")
ELSE()
    ADD_DEFINITIONS("-DRST_EXPORT=" "-DRSTSANDBOX_EXPORT=")
ENDIF()

PROTOBUF_GENERATE(CPP CPP_SANDBOX_SOURCES CPP_SANDBOX_HEADERS
                  EXPORT_MACRO RSTSANDBOX_EXPORT
                  PROTOFILES ${SANDBOX_PROTOS}
                  PROTOROOT ${SANDBOX_ROOT}
                  INCLUDES ${STABLE_ROOT}
                  OUTPATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(${SANDBOX_NAME} SHARED ${CPP_SANDBOX_SOURCES} ${CPP_SANDBOX_HEADERS})
TARGET_LINK_LIBRARIES(${SANDBOX_NAME} ${STABLE_NAME})
INSTALL(TARGETS ${SANDBOX_NAME}
        EXPORT RSTDepends
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION bin)

INSTALL_FILES_RECURSIVE("include/rst/sandbox/" CPP_SANDBOX_HEADERS)
