# Configure library

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR}
                           "${CMAKE_CURRENT_BINARY_DIR}/../stable")

ADD_DEFINITIONS(${RST_CFLAGS} ${RSTSANDBOX_CFLAGS})

ADD_LIBRARY(${SANDBOX_NAME} SHARED ${CPP_SANDBOX_SOURCES})
TARGET_LINK_LIBRARIES(${SANDBOX_NAME} ${STABLE_NAME})
SET_TARGET_PROPERTIES(${SANDBOX_NAME}
                       PROPERTIES
                       VERSION ${SO_VERSION})

# Install library and headers

INSTALL(TARGETS ${SANDBOX_NAME}
        EXPORT  RSTDepends
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION bin)

INSTALL_FILES_RECURSIVE("include/rst/sandbox/" CPP_SANDBOX_HEADERS)
