INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR}
                    "${CMAKE_CURRENT_BINARY_DIR}/../stable")

IF(WIN32)
    ADD_DEFINITIONS("/D${CMAKE_PROJECT_NAME}_EXPORT=__declspec(dllimport)"
                    "/D${CMAKE_PROJECT_NAME}SANDBOX_EXPORT=__declspec(dllexport)")
ELSE()
    ADD_DEFINITIONS("-D${CMAKE_PROJECT_NAME}_EXPORT="
                    "-D${CMAKE_PROJECT_NAME}SANDBOX_EXPORT=")
ENDIF()

PROTOBUF_GENERATE(CPP CPP_SANDBOX_SOURCES CPP_SANDBOX_HEADERS
                  EXPORT_MACRO "${CMAKE_PROJECT_NAME}SANDBOX_EXPORT"
                  PROTOFILES ${SANDBOX_PROTOS}
                  PROTOROOT ${SANDBOX_ROOT}
                  INCLUDES ${STABLE_ROOT}
                  OUTPATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(${SANDBOX_NAME} SHARED ${CPP_SANDBOX_SOURCES} ${CPP_SANDBOX_HEADERS})
TARGET_LINK_LIBRARIES(${SANDBOX_NAME} ${STABLE_NAME})
SET_TARGET_PROPERTIES(${SANDBOX_NAME}
                      PROPERTIES
                      VERSION ${SO_VERSION})
INSTALL(TARGETS ${SANDBOX_NAME}
        EXPORT "${CMAKE_PROJECT_NAME}Depends"
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION bin)

INSTALL_FILES_RECURSIVE("include/${INSTALL_PREFIX}/sandbox/"
                        CPP_SANDBOX_HEADERS)
