FIND_PACKAGE(Threads REQUIRED)

# Version stuff

INCLUDE(PadString)

PAD_STRING(MAJOR_PADDED 2 "0" ${RST_VERSION_MAJOR})
PAD_STRING(MINOR_PADDED 2 "0" ${RST_VERSION_MINOR})
PAD_STRING(PATCH_PADDED 2 "0" ${RST_VERSION_PATCH})
SET(RST_VERSION_NUMERIC "${MAJOR_PADDED}${MINOR_PADDED}${PATCH_PADDED}")
CONFIGURE_FILE(rst/RSTVersion.cpp.in "${CMAKE_CURRENT_BINARY_DIR}/rst/RSTVersion.cpp" @ONLY)
CONFIGURE_FILE(rst/RSTVersion.h.in "${CMAKE_CURRENT_BINARY_DIR}/rst/RSTVersion.h" @ONLY)
LIST(APPEND CPP_STABLE_HEADERS "${CMAKE_CURRENT_BINARY_DIR}/rst/RSTVersion.h")

# Configure library

ADD_DOMAIN_LIBRARY(SANDBOX STABLE)
