CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("RST-illegal-component-test")

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

FIND_PACKAGE(RST COMPONENTS sandbox foobar)
INCLUDE_DIRECTORIES(BEFORE SYSTEM ${RSTSANDBOX_INCLUDE_DIRS})
ADD_DEFINITIONS(${RSTSANDBOX_CFLAGS})

ADD_EXECUTABLE(tester tester.cpp)
TARGET_LINK_LIBRARIES(tester ${RSTSANDBOX_LIBRARIES})
